# algorithms_benchmarking

./: .gitignore  CMakeLists.txt  README.md
benchmarks_results/: test1.xlsm  test1_2.xlsm  test1_3.xlsm  test2.xlsm  test3.xlsm  tests_combined.xlsx
benchmarks_results/test1/: wyniki_quick_pivot_rozmiar_0.csv  wyniki_quick_pivot_rozmiar_1.csv  wyniki_quick_pivot_rozmiar_2.csv  wyniki_quick_pivot_rozmiar_3.csv  wyniki_rozmiar_alg_1.csv  wyniki_rozmiar_alg_2.csv  wyniki_shell_gap_0.csv  wyniki_shell_gap_1.csv
benchmarks_results/test1_2/: wyniki_pijanstwa.csv
benchmarks_results/test1_3/: wyniki_pivot_dystrybucja_0.csv  wyniki_pivot_dystrybucja_1.csv  wyniki_pivot_dystrybucja_2.csv  wyniki_pivot_dystrybucja_3.csv
benchmarks_results/test2/: wyniki_rozklad_alg_1.csv  wyniki_rozklad_alg_2.csv  wyniki_rozklad_alg_3.csv  wyniki_rozklad_alg_4.csv  wyniki_rozklad_alg_5.csv
benchmarks_results/test3/: wyniki_typy.csv
excel_scripts/: importowanie.txt  statystyki.txt  usuwanie.txt
include/algorithms/: AlgorithmFactory.h  BubbleSort.h  DrunkShellSort.h  HeapSort.h  ISortingAlgorithm.h  InsertionSort.h  QuickSort.h  ShellSort.h
include/benchmarking/: BenchmarkResult.h  BenchmarkRunner.h  SortingBenchmark.h
include/data/: DynamicArray.h  GeneratorFactory.h  IDataContainer.h  IDataGenerator.h  PartiallySortedDataGenerator.h  RandomDataGenerator.h  SortedDataGenerator.h
include/io/: ArgumentParser.h  CSVFileHandler.h  FileHandler.h  FileRunner.h
include/types/: AlgorithmType.h  Boardgame.h  DataType.h  GapSequence.h  (+2 more)
scripts/: config.bat  test1.bat  test2.bat  test3.bat
src/: main.cpp
(+23 files in other folders)
